修改了标题样式

--- a/docs/MyWebsite/BuildWebsite.mdx
+++ b/docs/MyWebsite/BuildWebsite.mdx
@@ -74,7 +74,7 @@ yarn config set registry https://registry.npmmirror.com # 使用淘宝维护的n
 
 ## <B1>二、创建本地站点</B1>
 
-### <B2>1.</B2> 打开命令行窗口 
+### <B2>1.</B2> <B2W>打开命令行窗口</B2W>
 
 - 找个地方新建一个文件夹，点进去（这些文件、文件夹的名字最好用英文名，不然可能会出问题）。  
 点一下地址栏，输入 cmd，然后回车——在当前目录下打开命令行窗口  
@@ -127,7 +127,7 @@ npm start
 
 ## <B1>三、将本地站点发布到 GitHub Pages</B1>
 
-### <B2>1.</B2> 在 <W>GitHub</W> 上新建 <W>github.io</W> 库
+### <B2>1.</B2> <B2W>在 <W>GitHub</W> 上新建 <W>github.io</W> 库</B2W>
 
 - 在 GitHub 上新建一个名为   **<W>你的账户名.github.io</W>**  的仓库
 
